# C-

encryption/: CMakeLists.txt  main.cpp  readme.md
کتابخانه/: Makefile.win  code.txt  gmon.out  library.dev  library.layout  main.cpp
